--- a/css/components/page-footer/_page-footer.scss
+++ b/css/components/page-footer/_page-footer.scss
@@ -1,14 +1,15 @@
-.page-footer {
+
+.page-footer{
     padding: 30px 0;
     font-size: 12px;
     color: #969696;
-}
-
-.page-footer__nav a {
-    margin-right: 10px;
-    color: #969696;
-}
-
-.page-footer__nav a:last-child {
-    margin-right: 0;
+    &__nav{
+        a{
+            margin-right: 10px;
+            color: #969696;
+            &:last-child{
+                margin-right: 0;;
+            }
+        }
+    }
 }
