--- a/css/components/user-details/_user-details.scss
+++ b/css/components/user-details/_user-details.scss
@@ -1,31 +1,38 @@
-.user-details {
+.user-details{
     display: flex;
     align-items: center;
     margin-right: 10px;
-}
-
-.user-details__img {
-    margin-right: 10px;
-}
-
-.user-details__content h2,
-.user-details__content h3 {
-    margin: 0 0 3px 0;
-    font-size: 12px;
-    font-weight: bold;
-}
-
-.user-details__content p {
-    margin: 0;
-    font-size: 11px;
-    color: #969696;
-}
-
-.user-details--big .user-details__content h2,
-.user-details--big .user-details__content h3 {
-    font-size: 13px;
-}
-
-.user-details--big .user-details__content p {
-    font-size: 12px;
+    &__img{
+        margin-right: 10px;
+    }
+    &__content{
+        h2{
+            margin: 0 0 3px 0;
+            font-size: 12px;
+            font-weight: bold;
+        }
+        h3{
+            margin: 0 0 3px 0;
+            font-size: 12px;
+            font-weight: bold; 
+        }
+        p{
+            margin: 0;
+            font-size: 11px;
+            color: $color-text; 
+        }
+    }
+    &--big{
+        .user-details__content{
+            h2{
+                font-size: 13px; 
+            }
+            h3{
+                font-size: 13px;
+            }
+            p{
+                font-size: 12px;  
+            }
+        }
+    }
 }
