renaming of color variables

--- a/css/base/_colors.scss
+++ b/css/base/_colors.scss
@@ -1,8 +1,8 @@
 $color-white: #ffffff;
 $color-black: #000000;
 $color-primary: #dd2a7c;
-$color-link: #3095f6;
-$color-secondary: #fafafa;
-$color-search: #efefef;
-$color-border: #dbdbdb;
-$color-text:#969696;
+$color-secondary: #3095f6;
+$color-gray: #dbdbdb;
+$color-gray--light: #efefef;
+$color-gray--lighter: #fafafa;
+$color-gray--dark:#969696;
