--- a/css/base/_input.scss
+++ b/css/base/_input.scss
@@ -9,7 +9,7 @@ input {
 }
 .search-input {
     min-width: 250px;
-    background: $color-search url(../../images/icons/magnifier.svg) no-repeat 10px center;
+    background: $color-gray--light url(../../images/icons/magnifier.svg) no-repeat 10px center;
     background-size: 16px;
     padding-left: 34px;
     font-size: 14px;
