--- a/css/components/image-square/_image-square.scss
+++ b/css/components/image-square/_image-square.scss
@@ -7,7 +7,7 @@
     border-radius: 100%;
     overflow: hidden;
     &.has-border{
-        border: 1px solid $color-border; 
+        border: 1px solid $color-gray; 
     }
     &.is-active{
         border: 2px solid $color-primary;
