--- a/css/components/suggestion-box/_suggestion-box.scss
+++ b/css/components/suggestion-box/_suggestion-box.scss
@@ -7,7 +7,7 @@
     h2{
         margin: 0;
         font-size: inherit;
-        color: $color-text; 
+        color: $color-gray--dark; 
     }
     a{
         color: $color-black;
