--- a/css/components/user-details/_user-details.scss
+++ b/css/components/user-details/_user-details.scss
@@ -19,7 +19,7 @@
         p{
             margin: 0;
             font-size: 11px;
-            color: $color-text; 
+            color: $color-gray--dark; 
         }
     }
     &--big{
