--- a/css/components/page-header/_page-header.scss
+++ b/css/components/page-header/_page-header.scss
@@ -16,8 +16,8 @@
     }
     &__search{
         display: none;
-        @media screen and (min-width: 800px) {
-                display: block;
+        @include large(800px){
+            display:block;
         }
     }
 }
