improvemnet mixin breakpoints

--- a/css/components/page-header/_page-header.scss
+++ b/css/components/page-header/_page-header.scss
@@ -16,7 +16,7 @@
     }
     &__search{
         display: none;
-        @include large(800px){
+        @include media(800px){
             display:block;
         }
     }
