--- a/css/helpers/breakpoint/_breakpoint.scss
+++ b/css/helpers/breakpoint/_breakpoint.scss
@@ -1,5 +1,15 @@
-@mixin large($arg){
-    @media screen and (min-width:$arg){
-        @content;
+$brakpoints: (
+    small: 0,
+    tablet: 800px,
+    desktop: 1280px
+);
+
+@mixin media($brakpoint){
+    @if(map-has-key($brakpoints, $brakpoint)){
+        @media screen and (min-width: map-get($breakpoints, $breakpoint)){
+            @content;
+        }
+    } @else{
+        @warn "Unfortunately, this value not exist";
     }
 }
