--- a/css/helpers/breakpoint/_breakpoint.scss
+++ b/css/helpers/breakpoint/_breakpoint.scss
@@ -10,6 +10,6 @@ $breakpoints: (
             @content;
         }
     } @else{
-        @warn "Unfortunately, this value not exist";
+        @warn "Unfortunately value `#{$breakpoint}` not exist is the map";
     }
 }
