--- a/css/base/_colors.scss
+++ b/css/base/_colors.scss
@@ -2,7 +2,7 @@ $color-white: #ffffff;
 $color-black: #000000;
 $color-primary: #dd2a7c;
 $color-secondary: #3095f6;
-$color-gray: #dbdbdb;
+$color-gray: #dbdbdb !default;
 $color-gray--light: #efefef;
-$color-gray--lighter: #fafafa;
+$color-gray--lighter: #fafafa !default;
 $color-gray--dark:#969696;
