--- a/css/components/page-header/_page-header.scss
+++ b/css/components/page-header/_page-header.scss
@@ -10,6 +10,18 @@
     }
     &__logo{
         flex-shrink: 0;
+        position: relative;
+        &::after{
+            content: " ";
+            display: inline-block;
+            background: url("/images/icons/tree.png") no-repeat ;
+            width: 40px;
+            height: 40px;
+            background-size: 40px;
+            position: absolute;
+            left: 115px;
+            top: -8px;
+        }
         img{
             display: block; 
         }
