--- a/css/index.css
+++ b/css/index.css
@@ -319,7 +319,7 @@ html, body {
 
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #fafafa;
+  background-color: #F5F4D7;
   font-size: 14px;
 }
 
@@ -406,7 +406,7 @@ input:focus {
   margin-bottom: 30px;
   padding: 10px 0;
   background-color: #ffffff;
-  border-bottom: 1px solid #dbdbdb;
+  border-bottom: 1px solid #951F2B;
 }
 .page-header__wrapper {
   display: flex;
@@ -415,6 +415,18 @@ input:focus {
 }
 .page-header__logo {
   flex-shrink: 0;
+  position: relative;
+}
+.page-header__logo::after {
+  content: " ";
+  display: inline-block;
+  background: url("/images/icons/tree.png") no-repeat;
+  width: 40px;
+  height: 40px;
+  background-size: 40px;
+  position: absolute;
+  left: 115px;
+  top: -8px;
 }
 .page-header__logo img {
   display: block;
@@ -452,7 +464,7 @@ input:focus {
   overflow: hidden;
 }
 .image-square.has-border {
-  border: 1px solid #dbdbdb;
+  border: 1px solid #951F2B;
 }
 .image-square.is-active {
   border: 2px solid #dd2a7c;
@@ -474,7 +486,7 @@ input:focus {
   margin-bottom: 20px;
   padding: 15px 0;
   background-color: #ffffff;
-  border: 1px solid #dbdbdb;
+  border: 1px solid #951F2B;
   border-radius: 7px;
 }
 .stories-box__list {
@@ -536,7 +548,7 @@ input:focus {
 .post {
   margin-bottom: 20px;
   background-color: #ffffff;
-  border: 1px solid #dbdbdb;
+  border: 1px solid #951F2B;
   border-radius: 7px;
 }
 .post:last-child {
