--- a/css/_brand.scss
+++ b/css/_brand.scss
@@ -1,2 +1,21 @@
 $color-gray--lighter: #F5F4D7;
 $color-gray: #951F2B;
+
+//Dodanie ikony świątecznej
+&__logo{
+    position: relative;
+    &::after{
+        content: " ";
+        display: inline-block;
+        background: url("/images/icons/tree.png") no-repeat ;
+        width: 40px;
+        height: 40px;
+        background-size: 40px;
+        position: absolute;
+        left: 115px;
+        top: -8px;
+    }
+}
+
+
+
