--- a/css/components/content-wrapper/_content-wrapper.scss
+++ b/css/components/content-wrapper/_content-wrapper.scss
@@ -1,4 +1,5 @@
 .content-wrapper{
+    
     @media screen and (min-width: 800px){
         display: flex;
         margin: 0 -15px;
@@ -23,4 +24,8 @@
         justify-content: space-between;
         margin-bottom: 30px;
     }
+}
+main > section{
+    background-color: rgba(89, 131, 252, 1);
+background-image: linear-gradient(0deg, rgba(89, 131, 252, 1) 0%, rgba(250, 250, 250, 1) 100%);
 }
