--- a/css/index.css
+++ b/css/index.css
@@ -319,7 +319,7 @@ html, body {
 
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #F5F4D7;
+  background-color: #fafafa;
   font-size: 14px;
 }
 
@@ -402,11 +402,18 @@ input:focus {
   margin-bottom: 30px;
 }
 
+main > section {
+  background-color: rgb(89, 131, 252);
+  background-image: linear-gradient(0deg, rgb(89, 131, 252) 0%, rgb(250, 250, 250) 100%);
+}
+
 .page-header {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   padding: 10px 0;
   background-color: #ffffff;
-  border-bottom: 1px solid #951F2B;
+  border-bottom: 1px solid #dbdbdb;
+  box-shadow: 0px 0px 12px 0px rgb(66, 68, 90);
+  position: relative;
 }
 .page-header__wrapper {
   display: flex;
@@ -417,19 +424,15 @@ input:focus {
   flex-shrink: 0;
   position: relative;
 }
-.page-header__logo::after {
-  content: " ";
-  display: inline-block;
-  background: url("/images/icons/tree.png") no-repeat;
-  width: 40px;
-  height: 40px;
-  background-size: 40px;
-  position: absolute;
-  left: 115px;
-  top: -8px;
-}
 .page-header__logo img {
   display: block;
+}
+.page-header__logo::after {
+  content: "BETA";
+  position: absolute;
+  bottom: -55%;
+  left: 0;
+  color: #000;
 }
 .page-header__search {
   display: none;
@@ -438,6 +441,12 @@ input:focus {
   .page-header__search {
     display: block;
   }
+}
+
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
 .page-nav {
@@ -464,7 +473,7 @@ input:focus {
   overflow: hidden;
 }
 .image-square.has-border {
-  border: 1px solid #951F2B;
+  border: 1px solid #dbdbdb;
 }
 .image-square.is-active {
   border: 2px solid #dd2a7c;
@@ -486,7 +495,7 @@ input:focus {
   margin-bottom: 20px;
   padding: 15px 0;
   background-color: #ffffff;
-  border: 1px solid #951F2B;
+  border: 1px solid #dbdbdb;
   border-radius: 7px;
 }
 .stories-box__list {
@@ -548,7 +557,7 @@ input:focus {
 .post {
   margin-bottom: 20px;
   background-color: #ffffff;
-  border: 1px solid #951F2B;
+  border: 1px solid #dbdbdb;
   border-radius: 7px;
 }
 .post:last-child {
