--- a/css/index.css
+++ b/css/index.css
@@ -403,7 +403,6 @@ input:focus {
 }
 
 main > section {
-  background-color: rgb(89, 131, 252);
   background-image: linear-gradient(0deg, rgb(89, 131, 252) 0%, rgb(250, 250, 250) 100%);
 }
 
@@ -412,7 +411,8 @@ main > section {
   padding: 10px 0;
   background-color: #ffffff;
   border-bottom: 1px solid #dbdbdb;
-
+  box-shadow: 0px 0px 12px 0px rgb(66, 68, 90);
+  position: relative;
 }
 .page-header__wrapper {
   display: flex;
@@ -421,7 +421,7 @@ main > section {
 }
 .page-header__logo {
   flex-shrink: 0;
-
+  position: relative;
 }
 .page-header__logo img {
   display: block;
